--- a/src/app/features/fav-snippets/fav-snippets.html
+++ b/src/app/features/fav-snippets/fav-snippets.html
@@ -9,7 +9,7 @@
     @if (loading) {
     <p class="text-gray-500 text-center text-lg">Cargando snippets...</p>
     } @else {
-      <div class="columns-1 md:columns-3 mt-4 "> 
+      <div class="columns-1 md:columns-2 2xl:columns-3 mt-4 "> 
         @for (item of snippetsUser; track item.uid) {
       <app-box-snippet
         [isFavourite]="true"
