--- a/src/app/features/snippets/snippets.html
+++ b/src/app/features/snippets/snippets.html
@@ -28,7 +28,7 @@
       </p>
     </div>
     } @else if (!isLoading && AuxSnippetList.length > 0) {
-    <div class="columns-1 md:columns-3 gap-4 mt-4">
+    <div class="columns-1 md:columns-2 xl:columns-2 2xl:columns-3 gap-4 mt-4">
       @for (item of AuxSnippetList; track item.uid) {
       <app-box-snippet
         [isFavourite]="detectIfUserSavedSnippet(item)"
