--- a/src/app/features/fav-snippets/fav-snippets.html
+++ b/src/app/features/fav-snippets/fav-snippets.html
@@ -1,4 +1,4 @@
-<section class="m-6 mt-28">
+<section class=" mt-28">
   <div class="flex flex-col space-y-2 min-h-[90vh]">
     <h1 class="text-3xl font-bold text-gray-100 mb-10">Lista de favoritos</h1>
     <div>
