--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
 <main class="grid min-h-screen grid-rows-[auto_1fr_auto]">
   <app-header></app-header>
-  <router-outlet />
+  <div class="m-6">
+    <router-outlet />
+  </div>
   @if (!isLoginRoute) {
   <app-footer></app-footer>
   }
