--- a/src/app/features/snippets/snippets.html
+++ b/src/app/features/snippets/snippets.html
@@ -1,4 +1,4 @@
-<div class="m-6 mt-28">
+<div class="mt-28">
   <div class="flex flex-col space-y-2 min-h-[90vh]">
     <app-filters
       [selectedFramework]="selectedFramework"
