--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -32,7 +32,7 @@
     >
       <app-logo></app-logo>
       <p class="mt-3 text-gray-300 text-sm max-w-xs">
-        La mejor manera de aprender es con el ejemplo
+        La mejor manera de aprender es con el ejemplo.
       </p>
     </div>
 
