implement maquetation demo of chatbot

--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -57,6 +57,7 @@
       </button>
     
       } @if (isLoggedIn) {
+      <app-button-ia></app-button-ia>
       <app-button-avatar-header> </app-button-avatar-header>
       }
     } @else {
