--- a/src/app/features/ia-agent/ia-agent.html
+++ b/src/app/features/ia-agent/ia-agent.html
@@ -2,26 +2,37 @@
   <div
     class="flex flex-col justify-between space-y-2 w-5xl bg-[#18181b] p-4 rounded-lg"
   >
-    <!-- respuestas -->
     <div
       class="flex flex-col space-y-2 p-2 rounded-lg h-full w-full overflow-y-auto text-white"
     >
-      <span><strong>User:</strong> What is the meaning of life?</span>
-      <span><strong>Bot:</strong> no hay</span>
+    @for (msg of messages; track trackByMsg(msg)) {
+      <span [ngClass]="{
+        'text-purple-300': msg.sender === 'user',
+       'text-white' : msg.sender === 'bot' } ">
+       <strong>{{ msg.sender}}:</strong> {{ msg.text }}
+      </span>
+    }
+    @if (loading) {
+      <span class="loader"></span>
+    }
     </div>
     <!-- input -->
     <div class="flex gap-2">
       <input
         id="userInput"
         type="text"
+        (keyup.enter)="submitMessage()"
+        [(ngModel)]="userInput"
         placeholder="Escribe tu pregunta..."
         class="flex-1 px-4 py-2 rounded-lg bg-[#18181b] border-1 border-white text-white focus:outline-none focus:ring-[#9810fa]"
       />
       <button
-        id="sendBtn"
-        class="px-4 py-2 bg-[#9810fa] rounded-lg hover:bg-[#242323] transition"
+        (click)="submitMessage()"
+        type="button"
+        [disabled]="!userInput.trim() || loading"
+        class="px-4 py-2 bg-[#9810fa] rounded-lg hover:bg-[#242323] transition disabled:opacity-50 disabled:cursor-not-allowed"
       >
-        Enviar
+         {{ loading ? 'Enviando...' : 'Enviar' }}
       </button>
     </div>
   </div>
