--- a/src/app/features/auth/form-login-register.html
+++ b/src/app/features/auth/form-login-register.html
@@ -1,4 +1,11 @@
 <div class="min-h-[90vh] lg:min-h-[92vh] flex">
+  <!-- button of back -->
+   <div class="absolute top-8 left-8 p-2 rounded-full cursor-pointer hover:bg-gray-700 transition" (click)="goBack()">
+    <svg class="w-8 h-8 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M5 12l4-4m-4 4 4 4"/>
+</svg>
+
+   </div>
   <div class="w-full lg:w-1/2 flex items-center justify-center">
     <div class="w-full max-w-md">
       <div class="p-10">
