--- a/src/app/features/ia-agent/components/button-sidebar/button-sidebar.html
+++ b/src/app/features/ia-agent/components/button-sidebar/button-sidebar.html
@@ -3,7 +3,7 @@
   <input
     [type]="type()"
     [placeholder]="placeholder()"
-    class="p-2 w-full text-left cursor-pointer rounded-lg border-b-1 border-[#282c34] hover:bg-[#282c34] transition text-white placeholder:px-6"
+    class="p-2 w-full text-left rounded-lg border-b-1 border-[#282c34] cursor-text transition text-white placeholder:px-6"
   />
   } @else {
   <button
